--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ cat > .env << 'EOL'
 # NBA Analytics Environment Variables
 
 # SportsData.io API Configuration
-SPORTSDATA_API_KEY=SPORTSDATA_API_BASE_URL=https://replay.sportsdata.io/api/v3/nba/
-SPORTSDATA_API_BASE_URL=https://replay.sportsdata.io/api/v3/nba/
+SPORTSDATA_API_KEY=api-key
+SPORTSDATA_API_BASE_URL=https://api.sportsdata.io/api/v3/nba/
 
 # AWS Configuration (if needed)
 AWS_REGION=us-east-1
